Optimizador/parser.out
Created by PLY version 3.11 (http://www.dabeaz.com/ply)

Grammar

Rule 0     S' -> init
Rule 1     init -> RPACKAGE ID PTCOMA imports declaraciones L_codigo
Rule 2     init -> RPACKAGE ID PTCOMA declaraciones L_codigo
Rule 3     imports -> imports import
Rule 4     imports -> import
Rule 5     import -> RIMPORT PARI CADENA PARD PTCOMA
Rule 6     declaraciones -> declaraciones declaracion
Rule 7     declaraciones -> declaracion
Rule 8     declaracion -> RVAR temp_list CORI ENTERO CORD RFLOAT PTCOMA
Rule 9     declaracion -> RVAR temp_list tipo PTCOMA
Rule 10    temp_list -> temp_list COMA ID
Rule 11    temp_list -> ID
Rule 12    tipo -> RINT
Rule 13    tipo -> RFLOAT
Rule 14    L_codigo -> L_codigo codigo
Rule 15    L_codigo -> codigo
Rule 16    codigo -> code
Rule 17    code -> RFUNC ID PARI PARD instrucciones
Rule 18    instrucciones -> LLI instrucciones_2 LLD
Rule 19    instrucciones_2 -> instrucciones_2 instruccion
Rule 20    instrucciones_2 -> instruccion
Rule 21    instruccion -> asignacion PTCOMA
Rule 22    instruccion -> label DPUNTOS
Rule 23    instruccion -> gotoS PTCOMA
Rule 24    instruccion -> llamada_funcion PTCOMA
Rule 25    instruccion -> cond_if
Rule 26    instruccion -> returnE PTCOMA
Rule 27    instruccion -> printF PTCOMA
Rule 28    label -> ID
Rule 29    gotoS -> RGOTO ID
Rule 30    returnE -> RRETURN
Rule 31    printF -> RFMT PUNTO RPRINTF PARI CADENA COMA valor PARD
Rule 32    valor -> RINT PARI expresion PARD
Rule 33    valor -> expresion
Rule 34    cond_if -> RIF expresion LLI RGOTO ID PTCOMA LLD
Rule 35    access -> ID CORI RINT PARI expresion PARD CORD
Rule 36    access -> ID CORI expresion CORD
Rule 37    asignacion -> access IGUAL expresion
Rule 38    asignacion -> ID IGUAL expresion
Rule 39    asignacion -> ID IGUAL access
Rule 40    llamada_funcion -> ID PARI PARD
Rule 41    expresion -> expresion MAS expresion
Rule 42    expresion -> expresion MENOS expresion
Rule 43    expresion -> expresion POR expresion
Rule 44    expresion -> expresion DIV expresion
Rule 45    expresion -> expresion OR expresion
Rule 46    expresion -> expresion AND expresion
Rule 47    expresion -> expresion IGUALDAD expresion
Rule 48    expresion -> expresion DIFERENTE expresion
Rule 49    expresion -> expresion MAYOR expresion
Rule 50    expresion -> expresion MENOR expresion
Rule 51    expresion -> expresion MAYORI expresion
Rule 52    expresion -> expresion MENORI expresion
Rule 53    expresion -> expresion POT expresion
Rule 54    expresion -> expresion MOD expresion
Rule 55    expresion -> PARI expresion PARD
Rule 56    expresion -> ENTERO
Rule 57    expresion -> ID
Rule 58    expresion -> MENOS ENTERO
Rule 59    expresion -> DECIMAL
Rule 60    expresion -> RMATH PUNTO RMOD PARI expresion COMA expresion PARD

Terminals, with rules where they appear

AND                  : 46
CADENA               : 5 31
COMA                 : 10 31 60
CORD                 : 8 35 36
CORI                 : 8 35 36
DECIMAL              : 59
DIFERENTE            : 48
DIV                  : 44
DPUNTOS              : 22
ENTERO               : 8 56 58
ID                   : 1 2 10 11 17 28 29 34 35 36 38 39 40 57
IGUAL                : 37 38 39
IGUALDAD             : 47
LLD                  : 18 34
LLI                  : 18 34
MAS                  : 41
MAYOR                : 49
MAYORI               : 51
MENOR                : 50
MENORI               : 52
MENOS                : 42 58
MOD                  : 54
OR                   : 45
PARD                 : 5 17 31 32 35 40 55 60
PARI                 : 5 17 31 32 35 40 55 60
POR                  : 43
POT                  : 53
PTCOMA               : 1 2 5 8 9 21 23 24 26 27 34
PUNTO                : 31 60
RFLOAT               : 8 13
RFMT                 : 31
RFUNC                : 17
RGOTO                : 29 34
RIF                  : 34
RIMPORT              : 5
RINT                 : 12 32 35
RMATH                : 60
RMOD                 : 60
RPACKAGE             : 1 2
RPRINTF              : 31
RRETURN              : 30
RVAR                 : 8 9
error                : 

Nonterminals, with rules where they appear

L_codigo             : 1 2 14
access               : 37 39
asignacion           : 21
code                 : 16
codigo               : 14 15
cond_if              : 25
declaracion          : 6 7
declaraciones        : 1 2 6
expresion            : 32 33 34 35 36 37 38 41 41 42 42 43 43 44 44 45 45 46 46 47 47 48 48 49 49 50 50 51 51 52 52 53 53 54 54 55 60 60
gotoS                : 23
import               : 3 4
imports              : 1 3
init                 : 0
instruccion          : 19 20
instrucciones        : 17
instrucciones_2      : 18 19
label                : 22
llamada_funcion      : 24
printF               : 27
returnE              : 26
temp_list            : 8 9 10
tipo                 : 9
valor                : 31

Parsing method: LALR

state 0

    (0) S' -> . init
    (1) init -> . RPACKAGE ID PTCOMA imports declaraciones L_codigo
    (2) init -> . RPACKAGE ID PTCOMA declaraciones L_codigo

    RPACKAGE        shift and go to state 2

    init                           shift and go to state 1

state 1

    (0) S' -> init .



state 2

    (1) init -> RPACKAGE . ID PTCOMA imports declaraciones L_codigo
    (2) init -> RPACKAGE . ID PTCOMA declaraciones L_codigo

    ID              shift and go to state 3


state 3

    (1) init -> RPACKAGE ID . PTCOMA imports declaraciones L_codigo
    (2) init -> RPACKAGE ID . PTCOMA declaraciones L_codigo

    PTCOMA          shift and go to state 4


state 4

    (1) init -> RPACKAGE ID PTCOMA . imports declaraciones L_codigo
    (2) init -> RPACKAGE ID PTCOMA . declaraciones L_codigo
    (3) imports -> . imports import
    (4) imports -> . import
    (6) declaraciones -> . declaraciones declaracion
    (7) declaraciones -> . declaracion
    (5) import -> . RIMPORT PARI CADENA PARD PTCOMA
    (8) declaracion -> . RVAR temp_list CORI ENTERO CORD RFLOAT PTCOMA
    (9) declaracion -> . RVAR temp_list tipo PTCOMA

    RIMPORT         shift and go to state 9
    RVAR            shift and go to state 10

    imports                        shift and go to state 5
    declaraciones                  shift and go to state 6
    import                         shift and go to state 7
    declaracion                    shift and go to state 8

state 5

    (1) init -> RPACKAGE ID PTCOMA imports . declaraciones L_codigo
    (3) imports -> imports . import
    (6) declaraciones -> . declaraciones declaracion
    (7) declaraciones -> . declaracion
    (5) import -> . RIMPORT PARI CADENA PARD PTCOMA
    (8) declaracion -> . RVAR temp_list CORI ENTERO CORD RFLOAT PTCOMA
    (9) declaracion -> . RVAR temp_list tipo PTCOMA

    RIMPORT         shift and go to state 9
    RVAR            shift and go to state 10

    declaraciones                  shift and go to state 11
    import                         shift and go to state 12
    declaracion                    shift and go to state 8

state 6

    (2) init -> RPACKAGE ID PTCOMA declaraciones . L_codigo
    (6) declaraciones -> declaraciones . declaracion
    (14) L_codigo -> . L_codigo codigo
    (15) L_codigo -> . codigo
    (8) declaracion -> . RVAR temp_list CORI ENTERO CORD RFLOAT PTCOMA
    (9) declaracion -> . RVAR temp_list tipo PTCOMA
    (16) codigo -> . code
    (17) code -> . RFUNC ID PARI PARD instrucciones

    RVAR            shift and go to state 10
    RFUNC           shift and go to state 17

    L_codigo                       shift and go to state 13
    declaracion                    shift and go to state 14
    codigo                         shift and go to state 15
    code                           shift and go to state 16

state 7

    (4) imports -> import .

    RIMPORT         reduce using rule 4 (imports -> import .)
    RVAR            reduce using rule 4 (imports -> import .)


state 8

    (7) declaraciones -> declaracion .

    RVAR            reduce using rule 7 (declaraciones -> declaracion .)
    RFUNC           reduce using rule 7 (declaraciones -> declaracion .)


state 9

    (5) import -> RIMPORT . PARI CADENA PARD PTCOMA

    PARI            shift and go to state 18


state 10

    (8) declaracion -> RVAR . temp_list CORI ENTERO CORD RFLOAT PTCOMA
    (9) declaracion -> RVAR . temp_list tipo PTCOMA
    (10) temp_list -> . temp_list COMA ID
    (11) temp_list -> . ID

    ID              shift and go to state 20

    temp_list                      shift and go to state 19

state 11

    (1) init -> RPACKAGE ID PTCOMA imports declaraciones . L_codigo
    (6) declaraciones -> declaraciones . declaracion
    (14) L_codigo -> . L_codigo codigo
    (15) L_codigo -> . codigo
    (8) declaracion -> . RVAR temp_list CORI ENTERO CORD RFLOAT PTCOMA
    (9) declaracion -> . RVAR temp_list tipo PTCOMA
    (16) codigo -> . code
    (17) code -> . RFUNC ID PARI PARD instrucciones

    RVAR            shift and go to state 10
    RFUNC           shift and go to state 17

    L_codigo                       shift and go to state 21
    declaracion                    shift and go to state 14
    codigo                         shift and go to state 15
    code                           shift and go to state 16

state 12

    (3) imports -> imports import .

    RIMPORT         reduce using rule 3 (imports -> imports import .)
    RVAR            reduce using rule 3 (imports -> imports import .)


state 13

    (2) init -> RPACKAGE ID PTCOMA declaraciones L_codigo .
    (14) L_codigo -> L_codigo . codigo
    (16) codigo -> . code
    (17) code -> . RFUNC ID PARI PARD instrucciones

    $end            reduce using rule 2 (init -> RPACKAGE ID PTCOMA declaraciones L_codigo .)
    RFUNC           shift and go to state 17

    codigo                         shift and go to state 22
    code                           shift and go to state 16

state 14

    (6) declaraciones -> declaraciones declaracion .

    RVAR            reduce using rule 6 (declaraciones -> declaraciones declaracion .)
    RFUNC           reduce using rule 6 (declaraciones -> declaraciones declaracion .)


state 15

    (15) L_codigo -> codigo .

    RFUNC           reduce using rule 15 (L_codigo -> codigo .)
    $end            reduce using rule 15 (L_codigo -> codigo .)


state 16

    (16) codigo -> code .

    RFUNC           reduce using rule 16 (codigo -> code .)
    $end            reduce using rule 16 (codigo -> code .)


state 17

    (17) code -> RFUNC . ID PARI PARD instrucciones

    ID              shift and go to state 23


state 18

    (5) import -> RIMPORT PARI . CADENA PARD PTCOMA

    CADENA          shift and go to state 24


state 19

    (8) declaracion -> RVAR temp_list . CORI ENTERO CORD RFLOAT PTCOMA
    (9) declaracion -> RVAR temp_list . tipo PTCOMA
    (10) temp_list -> temp_list . COMA ID
    (12) tipo -> . RINT
    (13) tipo -> . RFLOAT

    CORI            shift and go to state 25
    COMA            shift and go to state 28
    RINT            shift and go to state 29
    RFLOAT          shift and go to state 26

    tipo                           shift and go to state 27

state 20

    (11) temp_list -> ID .

    CORI            reduce using rule 11 (temp_list -> ID .)
    COMA            reduce using rule 11 (temp_list -> ID .)
    RINT            reduce using rule 11 (temp_list -> ID .)
    RFLOAT          reduce using rule 11 (temp_list -> ID .)


state 21

    (1) init -> RPACKAGE ID PTCOMA imports declaraciones L_codigo .
    (14) L_codigo -> L_codigo . codigo
    (16) codigo -> . code
    (17) code -> . RFUNC ID PARI PARD instrucciones

    $end            reduce using rule 1 (init -> RPACKAGE ID PTCOMA imports declaraciones L_codigo .)
    RFUNC           shift and go to state 17

    codigo                         shift and go to state 22
    code                           shift and go to state 16

state 22

    (14) L_codigo -> L_codigo codigo .

    RFUNC           reduce using rule 14 (L_codigo -> L_codigo codigo .)
    $end            reduce using rule 14 (L_codigo -> L_codigo codigo .)


state 23

    (17) code -> RFUNC ID . PARI PARD instrucciones

    PARI            shift and go to state 30


state 24

    (5) import -> RIMPORT PARI CADENA . PARD PTCOMA

    PARD            shift and go to state 31


state 25

    (8) declaracion -> RVAR temp_list CORI . ENTERO CORD RFLOAT PTCOMA

    ENTERO          shift and go to state 32


state 26

    (13) tipo -> RFLOAT .

    PTCOMA          reduce using rule 13 (tipo -> RFLOAT .)


state 27

    (9) declaracion -> RVAR temp_list tipo . PTCOMA

    PTCOMA          shift and go to state 33


state 28

    (10) temp_list -> temp_list COMA . ID

    ID              shift and go to state 34


state 29

    (12) tipo -> RINT .

    PTCOMA          reduce using rule 12 (tipo -> RINT .)


state 30

    (17) code -> RFUNC ID PARI . PARD instrucciones

    PARD            shift and go to state 35


state 31

    (5) import -> RIMPORT PARI CADENA PARD . PTCOMA

    PTCOMA          shift and go to state 36


state 32

    (8) declaracion -> RVAR temp_list CORI ENTERO . CORD RFLOAT PTCOMA

    CORD            shift and go to state 37


state 33

    (9) declaracion -> RVAR temp_list tipo PTCOMA .

    RVAR            reduce using rule 9 (declaracion -> RVAR temp_list tipo PTCOMA .)
    RFUNC           reduce using rule 9 (declaracion -> RVAR temp_list tipo PTCOMA .)


state 34

    (10) temp_list -> temp_list COMA ID .

    CORI            reduce using rule 10 (temp_list -> temp_list COMA ID .)
    COMA            reduce using rule 10 (temp_list -> temp_list COMA ID .)
    RINT            reduce using rule 10 (temp_list -> temp_list COMA ID .)
    RFLOAT          reduce using rule 10 (temp_list -> temp_list COMA ID .)


state 35

    (17) code -> RFUNC ID PARI PARD . instrucciones
    (18) instrucciones -> . LLI instrucciones_2 LLD

    LLI             shift and go to state 39

    instrucciones                  shift and go to state 38

state 36

    (5) import -> RIMPORT PARI CADENA PARD PTCOMA .

    RIMPORT         reduce using rule 5 (import -> RIMPORT PARI CADENA PARD PTCOMA .)
    RVAR            reduce using rule 5 (import -> RIMPORT PARI CADENA PARD PTCOMA .)


state 37

    (8) declaracion -> RVAR temp_list CORI ENTERO CORD . RFLOAT PTCOMA

    RFLOAT          shift and go to state 40


state 38

    (17) code -> RFUNC ID PARI PARD instrucciones .

    RFUNC           reduce using rule 17 (code -> RFUNC ID PARI PARD instrucciones .)
    $end            reduce using rule 17 (code -> RFUNC ID PARI PARD instrucciones .)


state 39

    (18) instrucciones -> LLI . instrucciones_2 LLD
    (19) instrucciones_2 -> . instrucciones_2 instruccion
    (20) instrucciones_2 -> . instruccion
    (21) instruccion -> . asignacion PTCOMA
    (22) instruccion -> . label DPUNTOS
    (23) instruccion -> . gotoS PTCOMA
    (24) instruccion -> . llamada_funcion PTCOMA
    (25) instruccion -> . cond_if
    (26) instruccion -> . returnE PTCOMA
    (27) instruccion -> . printF PTCOMA
    (37) asignacion -> . access IGUAL expresion
    (38) asignacion -> . ID IGUAL expresion
    (39) asignacion -> . ID IGUAL access
    (28) label -> . ID
    (29) gotoS -> . RGOTO ID
    (40) llamada_funcion -> . ID PARI PARD
    (34) cond_if -> . RIF expresion LLI RGOTO ID PTCOMA LLD
    (30) returnE -> . RRETURN
    (31) printF -> . RFMT PUNTO RPRINTF PARI CADENA COMA valor PARD
    (35) access -> . ID CORI RINT PARI expresion PARD CORD
    (36) access -> . ID CORI expresion CORD

    ID              shift and go to state 51
    RGOTO           shift and go to state 52
    RIF             shift and go to state 53
    RRETURN         shift and go to state 54
    RFMT            shift and go to state 55

    instrucciones_2                shift and go to state 41
    instruccion                    shift and go to state 42
    asignacion                     shift and go to state 43
    label                          shift and go to state 44
    gotoS                          shift and go to state 45
    llamada_funcion                shift and go to state 46
    cond_if                        shift and go to state 47
    returnE                        shift and go to state 48
    printF                         shift and go to state 49
    access                         shift and go to state 50

state 40

    (8) declaracion -> RVAR temp_list CORI ENTERO CORD RFLOAT . PTCOMA

    PTCOMA          shift and go to state 56


state 41

    (18) instrucciones -> LLI instrucciones_2 . LLD
    (19) instrucciones_2 -> instrucciones_2 . instruccion
    (21) instruccion -> . asignacion PTCOMA
    (22) instruccion -> . label DPUNTOS
    (23) instruccion -> . gotoS PTCOMA
    (24) instruccion -> . llamada_funcion PTCOMA
    (25) instruccion -> . cond_if
    (26) instruccion -> . returnE PTCOMA
    (27) instruccion -> . printF PTCOMA
    (37) asignacion -> . access IGUAL expresion
    (38) asignacion -> . ID IGUAL expresion
    (39) asignacion -> . ID IGUAL access
    (28) label -> . ID
    (29) gotoS -> . RGOTO ID
    (40) llamada_funcion -> . ID PARI PARD
    (34) cond_if -> . RIF expresion LLI RGOTO ID PTCOMA LLD
    (30) returnE -> . RRETURN
    (31) printF -> . RFMT PUNTO RPRINTF PARI CADENA COMA valor PARD
    (35) access -> . ID CORI RINT PARI expresion PARD CORD
    (36) access -> . ID CORI expresion CORD

    LLD             shift and go to state 57
    ID              shift and go to state 51
    RGOTO           shift and go to state 52
    RIF             shift and go to state 53
    RRETURN         shift and go to state 54
    RFMT            shift and go to state 55

    instruccion                    shift and go to state 58
    asignacion                     shift and go to state 43
    label                          shift and go to state 44
    gotoS                          shift and go to state 45
    llamada_funcion                shift and go to state 46
    cond_if                        shift and go to state 47
    returnE                        shift and go to state 48
    printF                         shift and go to state 49
    access                         shift and go to state 50

state 42

    (20) instrucciones_2 -> instruccion .

    LLD             reduce using rule 20 (instrucciones_2 -> instruccion .)
    ID              reduce using rule 20 (instrucciones_2 -> instruccion .)
    RGOTO           reduce using rule 20 (instrucciones_2 -> instruccion .)
    RIF             reduce using rule 20 (instrucciones_2 -> instruccion .)
    RRETURN         reduce using rule 20 (instrucciones_2 -> instruccion .)
    RFMT            reduce using rule 20 (instrucciones_2 -> instruccion .)


state 43

    (21) instruccion -> asignacion . PTCOMA

    PTCOMA          shift and go to state 59


state 44

    (22) instruccion -> label . DPUNTOS

    DPUNTOS         shift and go to state 60


state 45

    (23) instruccion -> gotoS . PTCOMA

    PTCOMA          shift and go to state 61


state 46

    (24) instruccion -> llamada_funcion . PTCOMA

    PTCOMA          shift and go to state 62


state 47

    (25) instruccion -> cond_if .

    LLD             reduce using rule 25 (instruccion -> cond_if .)
    ID              reduce using rule 25 (instruccion -> cond_if .)
    RGOTO           reduce using rule 25 (instruccion -> cond_if .)
    RIF             reduce using rule 25 (instruccion -> cond_if .)
    RRETURN         reduce using rule 25 (instruccion -> cond_if .)
    RFMT            reduce using rule 25 (instruccion -> cond_if .)


state 48

    (26) instruccion -> returnE . PTCOMA

    PTCOMA          shift and go to state 63


state 49

    (27) instruccion -> printF . PTCOMA

    PTCOMA          shift and go to state 64


state 50

    (37) asignacion -> access . IGUAL expresion

    IGUAL           shift and go to state 65


state 51

    (38) asignacion -> ID . IGUAL expresion
    (39) asignacion -> ID . IGUAL access
    (28) label -> ID .
    (40) llamada_funcion -> ID . PARI PARD
    (35) access -> ID . CORI RINT PARI expresion PARD CORD
    (36) access -> ID . CORI expresion CORD

    IGUAL           shift and go to state 66
    DPUNTOS         reduce using rule 28 (label -> ID .)
    PARI            shift and go to state 67
    CORI            shift and go to state 68


state 52

    (29) gotoS -> RGOTO . ID

    ID              shift and go to state 69


state 53

    (34) cond_if -> RIF . expresion LLI RGOTO ID PTCOMA LLD
    (41) expresion -> . expresion MAS expresion
    (42) expresion -> . expresion MENOS expresion
    (43) expresion -> . expresion POR expresion
    (44) expresion -> . expresion DIV expresion
    (45) expresion -> . expresion OR expresion
    (46) expresion -> . expresion AND expresion
    (47) expresion -> . expresion IGUALDAD expresion
    (48) expresion -> . expresion DIFERENTE expresion
    (49) expresion -> . expresion MAYOR expresion
    (50) expresion -> . expresion MENOR expresion
    (51) expresion -> . expresion MAYORI expresion
    (52) expresion -> . expresion MENORI expresion
    (53) expresion -> . expresion POT expresion
    (54) expresion -> . expresion MOD expresion
    (55) expresion -> . PARI expresion PARD
    (56) expresion -> . ENTERO
    (57) expresion -> . ID
    (58) expresion -> . MENOS ENTERO
    (59) expresion -> . DECIMAL
    (60) expresion -> . RMATH PUNTO RMOD PARI expresion COMA expresion PARD

    PARI            shift and go to state 73
    ENTERO          shift and go to state 74
    ID              shift and go to state 71
    MENOS           shift and go to state 72
    DECIMAL         shift and go to state 75
    RMATH           shift and go to state 76

    expresion                      shift and go to state 70

state 54

    (30) returnE -> RRETURN .

    PTCOMA          reduce using rule 30 (returnE -> RRETURN .)


state 55

    (31) printF -> RFMT . PUNTO RPRINTF PARI CADENA COMA valor PARD

    PUNTO           shift and go to state 77


state 56

    (8) declaracion -> RVAR temp_list CORI ENTERO CORD RFLOAT PTCOMA .

    RVAR            reduce using rule 8 (declaracion -> RVAR temp_list CORI ENTERO CORD RFLOAT PTCOMA .)
    RFUNC           reduce using rule 8 (declaracion -> RVAR temp_list CORI ENTERO CORD RFLOAT PTCOMA .)


state 57

    (18) instrucciones -> LLI instrucciones_2 LLD .

    RFUNC           reduce using rule 18 (instrucciones -> LLI instrucciones_2 LLD .)
    $end            reduce using rule 18 (instrucciones -> LLI instrucciones_2 LLD .)


state 58

    (19) instrucciones_2 -> instrucciones_2 instruccion .

    LLD             reduce using rule 19 (instrucciones_2 -> instrucciones_2 instruccion .)
    ID              reduce using rule 19 (instrucciones_2 -> instrucciones_2 instruccion .)
    RGOTO           reduce using rule 19 (instrucciones_2 -> instrucciones_2 instruccion .)
    RIF             reduce using rule 19 (instrucciones_2 -> instrucciones_2 instruccion .)
    RRETURN         reduce using rule 19 (instrucciones_2 -> instrucciones_2 instruccion .)
    RFMT            reduce using rule 19 (instrucciones_2 -> instrucciones_2 instruccion .)


state 59

    (21) instruccion -> asignacion PTCOMA .

    LLD             reduce using rule 21 (instruccion -> asignacion PTCOMA .)
    ID              reduce using rule 21 (instruccion -> asignacion PTCOMA .)
    RGOTO           reduce using rule 21 (instruccion -> asignacion PTCOMA .)
    RIF             reduce using rule 21 (instruccion -> asignacion PTCOMA .)
    RRETURN         reduce using rule 21 (instruccion -> asignacion PTCOMA .)
    RFMT            reduce using rule 21 (instruccion -> asignacion PTCOMA .)


state 60

    (22) instruccion -> label DPUNTOS .

    LLD             reduce using rule 22 (instruccion -> label DPUNTOS .)
    ID              reduce using rule 22 (instruccion -> label DPUNTOS .)
    RGOTO           reduce using rule 22 (instruccion -> label DPUNTOS .)
    RIF             reduce using rule 22 (instruccion -> label DPUNTOS .)
    RRETURN         reduce using rule 22 (instruccion -> label DPUNTOS .)
    RFMT            reduce using rule 22 (instruccion -> label DPUNTOS .)


state 61

    (23) instruccion -> gotoS PTCOMA .

    LLD             reduce using rule 23 (instruccion -> gotoS PTCOMA .)
    ID              reduce using rule 23 (instruccion -> gotoS PTCOMA .)
    RGOTO           reduce using rule 23 (instruccion -> gotoS PTCOMA .)
    RIF             reduce using rule 23 (instruccion -> gotoS PTCOMA .)
    RRETURN         reduce using rule 23 (instruccion -> gotoS PTCOMA .)
    RFMT            reduce using rule 23 (instruccion -> gotoS PTCOMA .)


state 62

    (24) instruccion -> llamada_funcion PTCOMA .

    LLD             reduce using rule 24 (instruccion -> llamada_funcion PTCOMA .)
    ID              reduce using rule 24 (instruccion -> llamada_funcion PTCOMA .)
    RGOTO           reduce using rule 24 (instruccion -> llamada_funcion PTCOMA .)
    RIF             reduce using rule 24 (instruccion -> llamada_funcion PTCOMA .)
    RRETURN         reduce using rule 24 (instruccion -> llamada_funcion PTCOMA .)
    RFMT            reduce using rule 24 (instruccion -> llamada_funcion PTCOMA .)


state 63

    (26) instruccion -> returnE PTCOMA .

    LLD             reduce using rule 26 (instruccion -> returnE PTCOMA .)
    ID              reduce using rule 26 (instruccion -> returnE PTCOMA .)
    RGOTO           reduce using rule 26 (instruccion -> returnE PTCOMA .)
    RIF             reduce using rule 26 (instruccion -> returnE PTCOMA .)
    RRETURN         reduce using rule 26 (instruccion -> returnE PTCOMA .)
    RFMT            reduce using rule 26 (instruccion -> returnE PTCOMA .)


state 64

    (27) instruccion -> printF PTCOMA .

    LLD             reduce using rule 27 (instruccion -> printF PTCOMA .)
    ID              reduce using rule 27 (instruccion -> printF PTCOMA .)
    RGOTO           reduce using rule 27 (instruccion -> printF PTCOMA .)
    RIF             reduce using rule 27 (instruccion -> printF PTCOMA .)
    RRETURN         reduce using rule 27 (instruccion -> printF PTCOMA .)
    RFMT            reduce using rule 27 (instruccion -> printF PTCOMA .)


state 65
